# judge-auditor

./: .gitignore  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: examples.jsonl  judge.toml  judge_comparison.py
judge_auditor/: __init__.py  cli.py  config.py  records.py  synthetic.py
judge_auditor/analysis/: __init__.py  audit.py  consistency.py  position_bias.py  power_analysis.py  probe_bias.py  rubric_robustness.py  scale_analysis.py  stats.py  validity.py  verbosity_bias.py
judge_auditor/report/: __init__.py  comparison.py  diff.py  html.py  json_report.py  recommendations.py  terminal.py
judge_auditor/report/templates/: report.html.j2
judge_auditor/runner/: __init__.py  executor.py  parser.py  probes.py  protocol.py  sampling.py
judge_auditor/runner/backends/: __init__.py  anthropic.py  mock.py  openai.py
tests/: conftest.py  responders.py  test_anthropic_backend.py  test_audit.py  test_calibration.py  test_cli.py  test_comparison.py  test_config.py  test_consistency.py  test_diff.py  test_executor.py  test_openai_backend.py  test_parser.py  test_position_bias.py  test_power_analysis.py  test_probe_bias.py  test_properties.py  test_recommendations.py  test_records.py  test_reference_validation.py  test_report_html.py  test_report_json.py  test_rubric_robustness.py  test_sampling.py  test_scale_analysis.py  test_snapshots.py  test_stats.py  test_synthetic.py  test_validation.py  test_validity.py  test_verbosity_bias.py
tests/snapshots/: pairwise.html  pairwise.json  pairwise.txt  scalar.html  scalar.json  scalar.txt
