[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "judge-auditor"
version = "0.1.0"
description = "Measure how much your LLM-as-judge disagrees with itself before you trust it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "judge-auditor" }]
keywords = ["llm", "evaluation", "llm-as-judge", "reliability", "bias", "statistics"]
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.11",
    "jinja2>=3.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Heavy, optional: authoritative stats libraries used only to cross-validate the
# hand-rolled estimators in tests/test_reference_validation.py. Not required to
# run the package or the default dev/test suite (those tests importorskip).
refcheck = [
    "statsmodels>=0.14",
    "pingouin>=0.5",
]

[project.scripts]
judge-audit = "judge_auditor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["judge_auditor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally uses function calls (typer.Option/Argument) as default
# argument values; B008 would flag every option, so silence it for the CLI module.
"judge_auditor/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

# scipy ships no type stubs; trust it at the boundary while staying strict elsewhere.
[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
